--- a/src/views/admin/admin.html
+++ b/src/views/admin/admin.html
@@ -115,5 +115,8 @@
         </a>
       </div>
     </section>
+    <footer>
+			<p class="copyright">Copyright © 2022 StoreStore - All Rights Reserved</p>
+		</footer>
   </body>
 </html>
