--- a/src/views/cart/cart.html
+++ b/src/views/cart/cart.html
@@ -132,5 +132,8 @@
 				</div>
 			</div>
 		</section>
+		<footer>
+			<p class="copyright">Copyright © 2022 StoreStore - All Rights Reserved</p>
+		</footer>
 	</body>
 </html>
