--- a/src/views/login/login.html
+++ b/src/views/login/login.html
@@ -90,5 +90,8 @@
         </button>
       </form>
     </div>
+		<footer>
+			<p class="copyright">Copyright © 2022 StoreStore - All Rights Reserved</p>
+		</footer>
   </body>
 </html>
