--- a/src/views/orderList/orderList.html
+++ b/src/views/orderList/orderList.html
@@ -17,8 +17,8 @@
 			href="https://fonts.googleapis.com/css2?family=Libre+Bodoni:wght@400;700&family=Noto+Sans+KR:wght@100;300;400;700&display=swap"
 			rel="stylesheet"
 		/>
-				<!-- sweetalert -->
-				<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+		<!-- sweetalert -->
+		<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 		<!-- IONICONS -->
 		<script
 			type="module"
@@ -113,6 +113,9 @@
 				</div>
 			</div>
 		</section>
+		<footer>
+			<p class="copyright">Copyright © 2022 StoreStore - All Rights Reserved</p>
+		</footer>
 	</body>
 	<script src="orderList.js" type="module" defer></script>
 </html>
