--- a/src/views/payment/payment.html
+++ b/src/views/payment/payment.html
@@ -214,6 +214,9 @@
 				</div>
 			</div>
 		</div>
+		<footer>
+			<p class="copyright">Copyright © 2022 StoreStore - All Rights Reserved</p>
+		</footer>
 	</body>
 	<!-- 다음 주소 api -->
 	<script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
