--- a/src/views/paymentComplete/paymentComplete.html
+++ b/src/views/paymentComplete/paymentComplete.html
@@ -134,5 +134,8 @@
 			</article>
 			<button class="home-btn">다른 상품 보러가기</button>
 		</main>
+		<footer>
+			<p class="copyright">Copyright © 2022 StoreStore - All Rights Reserved</p>
+		</footer>
 	</body>
 </html>
