--- a/src/views/products/products.html
+++ b/src/views/products/products.html
@@ -106,5 +106,8 @@
 		<div id="to-top">
 			<i class="fa-solid fa-angle-up"></i>
 		</div>
+		<footer>
+			<p class="copyright">Copyright © 2022 StoreStore - All Rights Reserved</p>
+		</footer>
 	</body>
 </html>
