--- a/src/views/ranking/ranking.html
+++ b/src/views/ranking/ranking.html
@@ -97,14 +97,17 @@
 
 		<section class="rankedproducts" id="rankedproducts">
 			<div class="inputProduct" id="inputProduct">
-				<div id="loading-box"><div class="lds-ring"><div></div></div></div>
+				<div id="loading-box">
+					<div class="lds-ring"><div></div></div>
+				</div>
 			</div>
 		</section>
 
 		<div id="to-top">
 			<ion-icon name="chevron-up-outline"></ion-icon>
 		</div>
-
-		<footer>footer</footer>
+		<footer>
+			<p class="copyright">Copyright © 2022 StoreStore - All Rights Reserved</p>
+		</footer>
 	</body>
 </html>
