--- a/src/views/signout/signout.html
+++ b/src/views/signout/signout.html
@@ -108,5 +108,8 @@
             
         </form>
     </div>
+	<footer>
+		<p class="copyright">Copyright © 2022 StoreStore - All Rights Reserved</p>
+	</footer>
 </body>
 </html>
