--- a/src/views/mypage/mypage.html
+++ b/src/views/mypage/mypage.html
@@ -126,5 +126,8 @@
 				</a>
 			</div>
 		</section>
+		<footer>
+			<p class="copyright">Copyright © 2022 StoreStore - All Rights Reserved</p>
+		</footer>
 	</body>
 </html>
