--- a/src/views/productAdd/productAdd.html
+++ b/src/views/productAdd/productAdd.html
@@ -161,6 +161,8 @@
           </div>
         </div>
       </section>
-
+      <footer>
+        <p class="copyright">Copyright © 2022 StoreStore - All Rights Reserved</p>
+      </footer>
       </body>
     </header>
