--- a/src/views/productsList/productsList.html
+++ b/src/views/productsList/productsList.html
@@ -116,5 +116,8 @@
 				</div>
 			</div>
 		</section>
+		<footer>
+			<p class="copyright">Copyright © 2022 StoreStore - All Rights Reserved</p>
+		</footer>
 	</body>
 </html>
