--- a/src/views/register/register.html
+++ b/src/views/register/register.html
@@ -126,5 +126,8 @@
 				</button>
 			</form>
 		</div>
+		<footer>
+			<p class="copyright">Copyright © 2022 StoreStore - All Rights Reserved</p>
+		</footer>
 	</body>
 </html>
