로그인 창 생성

--- a/src/views/newproducts/newproducts.css
+++ b/src/views/newproducts/newproducts.css
@@ -120,3 +120,12 @@
   }
 }
 
+.nullcategory {
+	display: block;
+	width: 100%;
+	height: auto;
+	padding: 100px 0;
+	font-weight: 700;
+	font-size: 14px;
+	text-align: center;
+}
