--- a/src/views/css/common.css
+++ b/src/views/css/common.css
@@ -354,171 +354,6 @@ h1.logo {
 	text-align: center;
 }
 
-
-/* input css */
-
-.input {
-	position: relative;
-	z-index: 1;
-	display: inline-block;
-	margin: 1em;
-	max-width: 200px;
-	width: calc(100% - 2em);
-	vertical-align: top;
-}
-
-.input__field {
-	position: relative;
-	display: block;
-	float: right;
-	padding: 0.8em;
-	width: 60%;
-	border: none;
-	border-radius: 0;
-	background: #f0f0f0;
-	color: #aaa;
-	font-weight: 400;
-	font-family: "Avenir Next", "Helvetica Neue", Helvetica, Arial, sans-serif;
-	-webkit-appearance: none; /* for box shadows to show on iOS */
-}
-
-.input__field:focus {
-	outline: none;
-}
-
-.input__label {
-	display: inline-block;
-	float: right;
-	padding: 0 1em;
-	width: 40%;
-	color: #6a7989;
-	font-weight: bold;
-	font-size: 70.25%;
-	-webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-	-webkit-touch-callout: none;
-	-webkit-user-select: none;
-	-khtml-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
-}
-
-.input__label-content {
-	position: relative;
-	display: block;
-	padding: 1.6em 0;
-	width: 100%;
-}
-
-.graphic {
-	position: absolute;
-	top: 0;
-	left: 0;
-	fill: none;
-}
-
-.icon {
-	color: #ddd;
-	font-size: 150%;
-}
-
-/* Individual styles */
-
-
-
-/* Kozakura */
-.input--kozakura {
-	overflow: hidden;
-	padding-bottom: 1em;
-}
-
-.input__field--kozakura {
-	padding: 0.25em 0.5em;
-	margin-top: 1.25em;
-	width: 100%;
-	background: transparent;
-	color: #141414;
-	font-size: 1.55em;
-	opacity: 0;
-}
-
-.input__label--kozakura {
-	width: 100%;
-	text-align: left;
-	position: absolute;
-	top: 1em;
-	pointer-events: none;
-	overflow: hidden;
-	padding: 0 0.25em;
-	-webkit-transform: translate3d(1em, 2.75em, 0);
-	transform: translate3d(1em, 2.75em, 0);
-	-webkit-transition: -webkit-transform 0.3s;
-	transition: transform 0.3s;
-}
-
-.input__label-content--kozakura {
-	padding: 0.25em 0;
-	-webkit-transition: -webkit-transform 0.3s;
-	transition: transform 0.3s;
-}
-
-.input__label-content--kozakura::after {
-	content: attr(data-content);
-	position: absolute;
-	font-weight: 800;
-	top: 100%;
-	left: 0;
-	height: 100%;
-	width: 100%;
-	padding: 0.25em 0;
-	text-transform: uppercase;
-	letter-spacing: 1px;
-	font-size: 0.85em;
-}
-
-.graphic--kozakura {
-	pointer-events: none;
-	top: 1em;
-	bottom: 0px;
-	height: 4.5em;
-	z-index: -1;
-	-webkit-transition: -webkit-transform 0.7s, fill 0.7s;
-	transition: transform 0.7s, fill 0.7s;
-	-webkit-transition-timing-function: cubic-bezier(0, 0.25, 0.5, 1);
-	transition-timing-function: cubic-bezier(0, 0.25, 0.5, 1);
-} 
-
-.input__field--kozakura:focus,
-.input--filled .input__field--kozakura {
-	-webkit-transition: opacity 0s 0.35s;
-	transition: opacity 0s 0.35s;
-	opacity: 1;
-}
-
-.input__field--kozakura:focus + .input__label--kozakura,
-.input--filled .input__label--kozakura {
-	-webkit-transition-delay: 0.15s;
-	transition-delay: 0.15s;
-	-webkit-transform: translate3d(0, 0, 0);
-	transform: translate3d(0, 0, 0);
-}
-
-.input__field--kozakura:focus + .input__label--kozakura .input__label-content--kozakura,
-.input--filled .input__label-content--kozakura {
-	-webkit-transition-delay: 0.15s;
-	transition-delay: 0.15s;
-	-webkit-transform: translate3d(0, -100%, 0);
-	transform: translate3d(0, -100%, 0);
-}
-
-.input__field--kozakura:focus ~ .graphic--kozakura,
-.input--filled .graphic--kozakura {
-	fill: #fff;
-	-webkit-transform: translate3d(-66.6%, 0, 0);
-	transform: translate3d(-66.6%, 0, 0);
-}
-
 #submenu li{
 	display: flex;
 	justify-content: flex-end;
@@ -569,4 +404,113 @@ h1.logo {
 }
 .swal-content__input:focus {
 	border: 1px solid #141414;
+}
+.sub-menu{
+	margin-bottom: 10px;
+}
+
+.search {
+  display: table;
+	margin-right: 10px;
+}
+.search input {
+  background: none;
+  border: none;
+  outline: none;
+  width: 28px;
+  min-width: 0;
+  padding: 0;
+  z-index: 1;
+  position: relative;
+  line-height: 18px;
+  margin: 5px 0;
+  font-size: 14px;
+  -webkit-appearance: none;
+  font-family: "Mukta Malar";
+  transition: all 0.6s ease;
+  cursor: pointer;
+  color: #141414;
+}
+.search input + div {
+  position: relative;
+  height: 28px;
+  width: 100%;
+  margin: -28px 0 0 0;
+}
+.search input + div svg {
+  display: block;
+  position: absolute;
+  height: 28px;
+  width: 160px;
+  right: 0;
+  top: 0;
+  fill: none;
+  stroke: #141414;
+  stroke-width: 1.5px;
+  stroke-dashoffset: 271.908;
+  stroke-dasharray: 59 212.908;
+  transition: all 0.6s ease;
+}
+.search input:not(:-moz-placeholder-shown) {
+  width: 160px;
+  padding: 0 4px;
+  cursor: text;
+}
+.search input:not(:-ms-input-placeholder) {
+  width: 160px;
+  padding: 0 4px;
+  cursor: text;
+}
+.search input:not(:placeholder-shown), .search input:focus {
+  width: 160px;
+  padding: 0 4px;
+  cursor: text;
+}
+.search input:not(:-moz-placeholder-shown) + div svg {
+  stroke-dasharray: 150 212.908;
+  stroke-dashoffset: 300;
+}
+.search input:not(:-ms-input-placeholder) + div svg {
+  stroke-dasharray: 150 212.908;
+  stroke-dashoffset: 300;
+}
+.search input:not(:placeholder-shown) + div svg, .search input:focus + div svg {
+  stroke-dasharray: 150 212.908;
+  stroke-dashoffset: 300;
+}
+
+::-moz-selection {
+  background: rgba(255, 255, 255, 0.2);
+}
+
+::selection {
+  background: rgba(255, 255, 255, 0.2);
+}
+
+::-moz-selection {
+  background: rgba(255, 255, 255, 0.2);
+}
+
+html {
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+}
+
+* {
+  box-sizing: inherit;
+}
+*:before, *:after {
+  box-sizing: inherit;
+}
+
+
+body .dribbble {
+  position: fixed;
+  display: block;
+  right: 24px;
+  bottom: 24px;
+}
+body .dribbble img {
+  display: block;
+  width: 76px;
 }
