--- a/src/views/search/search.css
+++ b/src/views/search/search.css
@@ -121,6 +121,25 @@
 	}
 }
 
+
+.searchResultTItle-box{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  border-bottom: 2px solid #d2d0d0;
+  margin-bottom: 40px;
+
+}
+.searchResultTItle-box h1{
+  font-size: 25px;
+  font-weight: 500;
+}
+.searchResultTItle-box h1 strong{
+  font-size: 25px;
+  font-weight: 600;
+}
 .nullcategory {
 	display: block;
 	width: 100%;
