장바구니 버튼 사라진거 복구 + 구글로그인 버튼 생성

--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -106,7 +106,9 @@
 									</symbol>
 							</svg>
 									
-							 
+							<a href="/cart" aria-current="page">
+                <ion-icon name="bag-handle-outline"></ion-icon>
+              </a>
 							</li>
 						</ul>
 					</div>
