--- a/src/views/login/login.html
+++ b/src/views/login/login.html
@@ -11,6 +11,12 @@
 			sizes="32x32"
 			href="/StoreStore-favicon.png"
     />
+    <!-- 폰트 어썸: 아이콘 -->
+    <script
+    defer
+    src="https://kit.fontawesome.com/7630448495.js"
+    crossorigin="anonymous"
+    ></script>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Libre+Bodoni:wght@400;700&family=Noto+Sans+KR:wght@100;300;400;700&display=swap" rel="stylesheet">
@@ -79,6 +85,11 @@
                 autocomplete="on"
               />
             </div>
+          </div>
+          <div class="outhLogin">
+            <a href="/auth/google" class="googleLogin">
+              <i class="fa-brands fa-google"></i>
+            </a>
           </div>
           <div class="passwordFind-box">
             <button id="passwordFind">비밀번호 찾기</button>
