--- a/src/views/cart/cart.css
+++ b/src/views/cart/cart.css
@@ -7,9 +7,19 @@
 
 .cart-header {
 	display: flex;
-	align-items: flex-end;
-	border-bottom: 1px solid #dbdbdb;
-	padding-bottom: 1rem;
+	flex-direction: column;
+	align-items: center;
+}
+
+.cart-header > p {
+	font-size: 20px;
+	font-weight: 700;
+	display: inline-block;
+	width: 100%;
+	text-align: center;
+	border-bottom: 1px solid #e5e5e5;
+	padding: 0 0 2rem;
+	margin: 1.5rem 0;
 }
 
 .cart-products-header {
