--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -20,6 +20,12 @@
     src="https://kit.fontawesome.com/7630448495.js"
     crossorigin="anonymous"
     ></script>
+	<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Libre+Bodoni:wght@400;700&family=Noto+Sans+KR:wght@100;300;400;700&display=swap"
+			rel="stylesheet"
+		/>
 		<!--Swiper-->
 		<link
 			rel="stylesheet"
