--- a/src/views/cart/cart.css
+++ b/src/views/cart/cart.css
@@ -229,6 +229,7 @@ input[type='checkbox'] {
 	display: -webkit-box;
 	-webkit-line-clamp: 2;
 	-webkit-box-orient: vertical;
+	overflow: hidden;
 }
 .product_price {
 	font-weight: 700;
@@ -336,5 +337,8 @@ input[type='checkbox'] {
 @media (min-width: 320px) and (max-width: 1020px) {
 	.product_img {
 		display: none;
+	}
+	.product_info{
+		width: 100%;
 	}
 }
