--- a/src/views/cart/cart.css
+++ b/src/views/cart/cart.css
@@ -238,10 +238,12 @@ input[type='checkbox'] {
 
 .btn-quanity-box {
 	width: 100%;
+	height: 50px;
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
 	align-items: center;
+	padding: 10px;
 }
 
 .btn-quanity-box .num_minus_btn {
@@ -301,7 +303,7 @@ input[type='checkbox'] {
 	margin: 0;
 }
 .btn-item-buy {
-	width: 92px;
+	width: 8rem;
 	height: 2.3rem;
 	font-size: 13px;
 	line-height: 2.3rem;
@@ -340,5 +342,44 @@ input[type='checkbox'] {
 	}
 	.product_info{
 		width: 100%;
+	}
+}
+@media (min-width: 320px) and (max-width: 1020px) {
+	.product_img {
+		display: none;
+	}
+	.product_info{
+		width: 100%;
+	}
+	.btn-item-buy{
+		width: 13vw;
+	}
+	.item-price {
+    font-size: 15px;
+    margin-bottom: 10px;
+    font-weight: 700;
+}
+	.delete_btn{
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
+	.btn-quanity-box .num_minus_btn {
+		font-size: 16px;
+		width: 20px;
+		height: 20px;
+		margin: 0;
+	}
+	
+	.btn-quanity-box .num_plus_btn {
+		font-size: 16px;
+		width: 20px;
+		height: 20px;
+		margin:0;
+		padding:1px;
+	}
+	.btn-quanity-box .input_num {
+		width: 20px;
+		height: 20px;
 	}
 }
