--- a/src/views/productsList/productsList.css
+++ b/src/views/productsList/productsList.css
@@ -1,123 +1,103 @@
-li {
-  list-style: none;
+.section .container > h1 {
+	font-size: 20px;
+	font-weight: 700;
+	display: inline-block;
+	width: 100%;
+	text-align: center;
+	margin: 1.5rem 0;
 }
 
-ul {
-  list-style: none;
-}
-
-.div-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-}
-
-
-
-.products-box {
-  margin-top: 30px;
-
-}
-section{
-  margin-bottom: 50px;
-}
 .tit-box {
-  z-index: 100;
-  background-color: #fff;
-  top: 88px;
-  position: sticky;
-  display: flex;
-  align-items: center;
-  height: 56px;
-  border-top: 2px solid #000;
-  border-bottom: 1px solid #e2e3e6;
-  clear: both;
+	z-index: 100;
+	background-color: #fff;
+	top: 88px;
+	position: sticky;
+	display: flex;
+	align-items: center;
+	border-top: 1px solid #000;
+	border-bottom: 1px solid #e2e3e6;
+	clear: both;
 }
-.product-item{
-  display: flex;
-  align-items: center;
-  height: 56px;
-  border-bottom: 1px solid #e2e3e6;
-  clear: both;
+.product-item {
+	display: flex;
+	align-items: center;
+	border-bottom: 1px solid #e2e3e6;
+	clear: both;
 }
 .product-id,
-.product-id-cell{
-  width: 15%;
+.product-id-cell {
+	width: 15%;
 }
 .product-name,
-.product-name-cell{
-  width: 25%;
+.product-name-cell {
+	width: 25%;
 }
 .product-category,
-.product-category-cell{
-  width: 10%;
+.product-category-cell {
+	width: 10%;
 }
 .product-price,
-.product-price-cell{
-  width: 10%;
+.product-price-cell {
+	width: 10%;
 }
 .product-amount,
-.product-amount-cell{
-  width:10%
+.product-amount-cell {
+	width: 10%;
 }
 .product-sales,
-.product-sales-cell{
-  width:10%
+.product-sales-cell {
+	width: 10%;
 }
 .product-company,
-.product-company-cell{
-  width:10%
+.product-company-cell {
+	width: 10%;
 }
 .update-del-btn-box,
-.update-del-btn-cell{
-  width:10%
+.update-del-btn-cell {
+	width: 10%;
 }
-.update-del-btn-box{
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.update-del-btn-box {
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
-.update-del-btn-box button{
-  width: 30px;
-  height: 30px;
-  background-color: #f5f5f5;
-  border: 1px solid #e4e4e4;
-  border-radius: 2px;
-  transition: all 0.5s linear;
+.update-del-btn-box button {
+	width: 30px;
+	height: 30px;
+	background-color: #f5f5f5;
+	border: 1px solid #e4e4e4;
+	border-radius: 2px;
+	transition: all 0.5s linear;
 }
-.update-del-btn-box button:hover{
-  background-color: #e4e4e4;
+.update-del-btn-box button:hover {
+	background-color: #e4e4e4;
 }
-.del-btn{
-  margin-left: 5px;
+.del-btn {
+	margin-left: 5px;
 }
-.product-item p{
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 56px;
-  text-align: center;
-  margin: 0;
-  word-wrap: break-word;
-  word-break: break-all;
-  text-overflow: ellipsis; 
-  display: -webkit-box;
-  -webkit-line-clamp: 1;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
+.product-item p {
+	font-size: 12px;
+	text-align: center;
+	margin: 0.5rem 0;
+	padding: 0.5rem 0;
+	word-wrap: break-word;
+	word-break: break-all;
+	text-overflow: ellipsis;
+	display: -webkit-box;
+	-webkit-line-clamp: 1;
+	-webkit-box-orient: vertical;
+	overflow: hidden;
 }
-.tit-box p{
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 56px;
-  text-align: center;
-  margin: 0;
-  word-wrap: break-word;
-  word-break: break-all;
-  text-overflow: ellipsis; 
-  display: -webkit-box;
-  -webkit-line-clamp: 1;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
+.tit-box p {
+	font-size: 14px;
+	font-weight: 700;
+	text-align: center;
+	margin: 1rem 0;
+	word-wrap: break-word;
+	word-break: break-all;
+	text-overflow: ellipsis;
+	display: -webkit-box;
+	-webkit-line-clamp: 1;
+	-webkit-box-orient: vertical;
+	overflow: hidden;
 }
-
