header 여는 태그 누락 수정

--- a/src/views/admin/admin.html
+++ b/src/views/admin/admin.html
@@ -36,6 +36,7 @@
   </head>
   <body>
     <!-- 헤더 -->
+  <header>
     <div class="sub-menu">
       <!-- 회원가입,로그인 -->
       <ul id="navbar" class="navbar"></ul>
@@ -104,7 +105,7 @@
     <!-- 계정관리 페이지 블록들 구현 -->
     <section class="section">
       <div class="block account-header">
-        <h1 class="title">관리자 페이지</h1>
+        <h1 class="title">관리자페이지</h1>
       </div>
       <div class="menu-container">
         <a class="menu-card" href="/admin/orderList">
