--- a/src/views/mypage/mypage.html
+++ b/src/views/mypage/mypage.html
@@ -117,7 +117,7 @@
 		<!-- 계정관리 페이지 블록들 구현 -->
 		<section class="section">
 			<div class="block account-header">
-				<h1 class="title">계정관리</h1>
+				<h1 class="title">마이페이지</h1>
 			</div>
 			<div class="menu-container">
 				<a class="menu-card" href="/mypage/order">
