--- a/src/views/products/products.html
+++ b/src/views/products/products.html
@@ -106,7 +106,8 @@
 				</div>
 			</div>
 			<div id="currentPage"></div>
-		</header><div class="inputProduct" id="inputProduct">
+		</header>
+		<div class="inputProduct" id="inputProduct">
 				<div id="loading-box">
 					<div
 
