--- a/src/views/login/login.html
+++ b/src/views/login/login.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>StoreStore</title>
-    <!-- 아이콘 -->
-    <link
-      rel="icon"
-      type="image/png"
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>StoreStore</title>
+		<!-- 아이콘 -->
+		<link
+			rel="icon"
+			type="image/png"
 			sizes="32x32"
 			href="/StoreStore-favicon.png"
-    />
-    <!-- 폰트 어썸: 아이콘 -->
-    <script
-    defer
-    src="https://kit.fontawesome.com/7630448495.js"
-    crossorigin="anonymous"
-    ></script>
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Libre+Bodoni:wght@400;700&family=Noto+Sans+KR:wght@100;300;400;700&display=swap" rel="stylesheet">
+		/>
+		<!-- 폰트 어썸: 아이콘 -->
+		<script
+			defer
+			src="https://kit.fontawesome.com/7630448495.js"
+			crossorigin="anonymous"
+		></script>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Libre+Bodoni:wght@400;700&family=Noto+Sans+KR:wght@100;300;400;700&display=swap"
+			rel="stylesheet"
+		/>
 
 		<!-- IONICONS -->
 		<script
@@ -31,78 +34,75 @@
 			src="https://unpkg.com/ionicons@5.2.3/dist/ionicons/ionicons.js"
 		></script>
 
-    <!-- sweetalert -->
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+		<!-- sweetalert -->
+		<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
-    <!-- 커스텀 css, js -->
-    <link rel="stylesheet" href="../../css/common.css" />
-    <link rel="stylesheet" href="login.css" />
-    <script src="login.js" type="module" defer></script>
-  </head>
-  <body>
-    <!-- 헤더 -->
-    <div class="sub-menu">
-      <!-- 회원가입,로그인 -->
-      <ul id="navbar" class="navbar"></ul>
-    </div>
-    <div class="container-box">
-      <div class="headerLeft">
+		<!-- 커스텀 css, js -->
+		<link rel="stylesheet" href="../../css/common.css" />
+		<link rel="stylesheet" href="login.css" />
+		<script src="login.js" type="module" defer></script>
+	</head>
+	<body>
+		<!-- 헤더 -->
+		<header>
+			<div class="sub-menu">
+				<!-- 회원가입,로그인 -->
+				<ul id="navbar" class="navbar"></ul>
+			</div>
+			<div class="container-box">
+				<div class="headerLeft"></div>
+				<h1 class="logo"><a href="/">StoreStore</a></h1>
+				<div class="headerRight">
+					<!-- 장바구니 -->
+				</div>
+			</div>
+		</header>
 
-      </div>
-      <h1 class="logo"><a href="/">StoreStore</a></h1>
-      <div class="headerRight">
-        <!-- 장바구니 -->
-      </div>
-    </div>
-  </header>
+		<!-- 로그인 폼(Form) -->
+		<div class="login-form-container">
+			<form class="login-form-box" id="loginForm">
+				<p>로그인</p>
 
-    <!-- 로그인 폼(Form) -->
-    <div class="login-form-container">
-      <form class="login-form-box" id="loginForm">
-        <p>로그인</p>
-        
-        <div class="inner">
-          <div class="field">
-            <label class="label" for="emailInput">이메일</label>
-            <div class="control">
-              <input
-                class="input"
-                id="emailInput"
-                type="email"
-                placeholder="abc@example.com"
-                autocomplete="on"
-              />
-            </div>
-          </div>
-          <div class="field">
-            <label class="label" for="passwordInput">비밀번호</label>
-            <div class="control">
-              <input
-                class="input"
-                id="passwordInput"
-                type="password"
-                placeholder="********"
-                autocomplete="on"
-              />
-            </div>
-          </div>
-          <div class="outhLogin">
-            <a href="/auth/google" class="googleLogin">
-              <i class="fa-brands fa-google"></i>
-            </a>
-          </div>
-          <div class="passwordFind-box">
-            <button id="passwordFind">비밀번호 찾기</button>
-          </div>
-        </div>
+				<div class="inner">
+					<div class="field">
+						<label class="label" for="emailInput">이메일</label>
+						<div class="control">
+							<input
+								class="input"
+								id="emailInput"
+								type="email"
+								placeholder="abc@example.com"
+								autocomplete="on"
+							/>
+						</div>
+					</div>
+					<div class="field">
+						<label class="label" for="passwordInput">비밀번호</label>
+						<div class="control">
+							<input
+								class="input"
+								id="passwordInput"
+								type="password"
+								placeholder="********"
+								autocomplete="on"
+							/>
+						</div>
+					</div>
+					<div class="outhLogin">
+						<a href="/auth/google" class="googleLogin">
+							<i class="fa-brands fa-google"></i>
+						</a>
+					</div>
+					<div class="passwordFind-box">
+						<button id="passwordFind">비밀번호 찾기</button>
+					</div>
+				</div>
 
-        <button class="btn" id="submitButton">
-          로그인하기
-        </button>
-      </form>
-    </div>
+				<button class="btn" id="submitButton">로그인하기</button>
+			</form>
+		</div>
 		<footer>
 			<p class="copyright">Copyright © 2022 StoreStore - All Rights Reserved</p>
 		</footer>
-  </body>
+	</body>
 </html>
