--- a/src/views/productAdd/productAdd.css
+++ b/src/views/productAdd/productAdd.css
@@ -1,45 +1,226 @@
-.modal_wrap{
-    display: none;
-    width: 500px;
-    height: 500px;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    margin: -250px 0 0 -250px;
-    background: #eee;
-    z-index: 100;
-
+section {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding: 0 20%;
 }
 
-.black_bg{
-    display: none;
-    position: fixed;
-    content: "";
-    width: 100vw;
-    height: 100vh;
-    background-color: rgba(0,0,0,0.5);
-    top : 0;
-    left : 0;
-    z-index: 100;
+.container {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
-.modal_close{
-    width: 26px;
-    height: 26px;
-    position: absolute;
-    top: -30px;
-    right: 0;
+
+.container > h1 {
+	font-size: 20px;
+	font-weight: 700;
+	display: inline-block;
+	width: 100%;
+	text-align: center;
+	border-bottom: 1px solid #e5e5e5;
+	padding: 0 0 2rem;
+	margin: 0 0 1.5rem;
 }
-.modal_close> a{
-    display: block;
-    width: 100%;
-    height: 100%;
-    background:url(https://img.icons8.com/metro/26/000000/close-window.png);
-    text-indent: -9999px;
+.modal-container {
+	background-color: #fff;
+	width: 100%;
+	height: 100%;
+	position: relative;
 }
-.modal-box{
-    height: 500px;
-    overflow: scroll;
+.menu-container {
+	width: 100%;
 }
-.hide{
-    display: none;
+.field {
+	width: 100%;
+}
+.field.img {
+	display: flex;
+	flex-direction: column;
+}
+
+.label {
+	font-size: 14px;
+	font-weight: 700;
+}
+.field.img label {
+	padding: 0 3rem;
+	display: inline-block;
+	font-size: 13px;
+	height: 2.3rem;
+	line-height: 2.3rem;
+	cursor: pointer;
+	box-sizing: border-box;
+	white-space: nowrap;
+	background-color: #e5e5e5;
+	color: #333;
+}
+.field.img input[type='file'] {
+	position: absolute;
+	width: 0;
+	height: 0;
+	padding: 0;
+	overflow: hidden;
+	border: 0;
+}
+
+.control {
+	padding: 0.5rem 0;
+}
+.control.price,
+.control.category {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+.control.category > .btn {
+	margin-left: 0.5rem;
+	padding: 0 2rem;
+}
+.control.price > span {
+	font-size: 14px;
+	padding-left: 0.5rem;
+}
+#imageViewr {
+	max-width: 300px;
+	max-height: 300px;
+	margin-top: 0.5rem;
+}
+
+#categorySelectBox {
+	margin: 1rem 0;
+}
+
+#categoryId {
+	display: flex;
+	justify-content: space-between;
+	margin: 0 0 0.5rem;
+}
+
+.input,
+#categorySelectBox,
+#updateInput,
+#categoryInput {
+	width: 100%;
+	border: 1px solid #e5e5e5;
+	padding: 0 1rem;
+	height: 2.3rem;
+	line-height: 2.3rem;
+}
+#updateInput {
+	height: 2rem;
+	line-height: 2rem;
+}
+#updateInput:focus,
+#categoryInput:focus {
+	outline: none !important;
+	border: 1px solid #141414;
+	background-color: #fff;
+}
+#categoryInput {
+	width: 85.9%;
+	height: 2rem;
+	line-height: 2rem;
+	margin: 1rem 0 3rem;
+}
+#updateInput:-webkit-autofill,
+#categoryInput:-webkit-autofill {
+	-webkit-box-shadow: 0 0 0 1000px #fff inset;
+}
+#categoryId > button,
+#ScategoyUl > button {
+	padding: 0 0.5rem;
+	display: inline-block;
+	font-size: 13px;
+	cursor: pointer;
+	box-sizing: border-box;
+	white-space: nowrap;
+	background-color: #e5e5e5;
+	color: #333;
+	border: none;
+}
+#ScategoyUl > button {
+	padding: 0.5rem 1rem;
+}
+
+.input.readonly {
+	background-color: #eee;
+}
+.input.textarea {
+	line-height: 1.2rem;
+	padding: 0.4rem 1rem;
+	height: 6rem;
+}
+
+.input:focus {
+	outline: none !important;
+	border: 1px solid #141414;
+	background-color: #fff;
+}
+.input.readonly:focus {
+	outline: none !important;
+	border: 1px solid #e5e5e5;
+	background-color: #eee;
+}
+input:-webkit-autofill {
+	-webkit-box-shadow: 0 0 0 1000px #fff inset;
+}
+.login-form > .btn {
+	max-width: 100%;
+	min-width: 100%;
+	margin: 1.5rem 0;
+}
+#updatePasswordButton {
+	display: block;
+	margin: 0.5rem 0 0;
+}
+.buttons {
+	text-align: center;
+	margin: 1.5rem 0;
+}
+
+.modal_wrap {
+	display: none;
+	width: 500px;
+	height: 500px;
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	margin: -250px 0 0 -250px;
+	background: #fff;
+	z-index: 100;
+	padding: 3rem;
+	overflow: hidden;
+	overflow-y: scroll;
+}
+/* scroll design  */
+.modal_wrap::-webkit-scrollbar {
+	width: 5px;
+}
+/* 막대색 */
+.modal_wrap::-webkit-scrollbar-thumb {
+	background-color: #e5e5e5;
+}
+/* 배경색 */
+.modal_wrap::-webkit-scrollbar-track {
+	background-color: #fff;
+}
+
+.black_bg {
+	display: none;
+	position: fixed;
+	content: '';
+	width: 100vw;
+	height: 100vh;
+	background-color: rgba(0, 0, 0, 0.5);
+	top: 0;
+	left: 0;
+	z-index: 100;
+}
+
+.modal_close > a > .md.hydrated {
+	z-index: 101;
+	position: absolute;
+	top: -30px;
+	right: -30px;
 }
