--- a/src/views/login/login.html
+++ b/src/views/login/login.html
@@ -88,17 +88,22 @@
 							/>
 						</div>
 					</div>
-					<div class="outhLogin">
-						<a href="/auth/google" class="googleLogin">
-							<i class="fa-brands fa-google"></i>
-						</a>
-					</div>
 					<div class="passwordFind-box">
 						<button id="passwordFind">비밀번호 찾기</button>
 					</div>
 				</div>
 
 				<button class="btn" id="submitButton">로그인하기</button>
+				<div class="outhLogin">
+					<a href="/auth/google" class="googleLogin btn">
+						<img
+							src="https://www.freepnglogos.com/uploads/google-logo-png/google-logo-png-suite-everything-you-need-know-about-google-newest-0.png"
+							alt="google"
+							class="login-logo"
+						/>
+						<span>Google 로그인</span>
+					</a>
+				</div>
 			</form>
 		</div>
 		<footer>
