--- a/src/views/login/login.html
+++ b/src/views/login/login.html
@@ -95,6 +95,16 @@
 
 				<button class="btn" id="submitButton">로그인하기</button>
 				<div class="outhLogin">
+					<a href="/auth/kakao" class="kakaoLogin btn">
+						<img
+							src="https://t1.daumcdn.net/cfile/tistory/2315BC3453D9F98F03"
+							alt="kakao"
+							class="login-logo"
+						/>
+						<span>카카오 로그인</span>
+					</a>
+				</div>
+				<div class="outhLogin">
 					<a href="/auth/google" class="googleLogin btn">
 						<img
 							src="https://www.freepnglogos.com/uploads/google-logo-png/google-logo-png-suite-everything-you-need-know-about-google-newest-0.png"
