--- a/src/views/payment/payment.html
+++ b/src/views/payment/payment.html
@@ -112,21 +112,8 @@
 		</header>
 		<div class="marginbox">
 			<!-- 결제화면 -->
-			<div class="block account-header">
-				<!-- <h1 class="title">주문결제</h1> -->
-			</div>
+				<h1 class="title">주문결제</h1>
 			<div class="container">
-				<div class="cart-header">
-					<div class="subtitle">
-						<p class="is-size-6">장바구니 &gt; &nbsp;</p>
-					</div>
-					<div class="title">
-						<p class="is-size-2">주문결제</p>
-					</div>
-					<div class="subtitle">
-						<p class="is-size-6">&gt; &nbsp; 주문완료</p>
-					</div>
-				</div>
 				<h3 class="title">주문상품</h3>
 				<div class="cart-product-box">
 					<div class="tit-box">
