자잘한 오류 수정 + 리뷰 전송 기능 추가

--- a/src/views/order/order.css
+++ b/src/views/order/order.css
@@ -84,14 +84,15 @@
 .showModal {
 	display: block !important;
 	position: fixed;
-	top: 20%;
-	left: 25%;
 	/* top: calc(50vh - 200px); */
 	/* left: calc(50vw - 200px); */
 	background-color: white;
 	text-align: center;
 	width: 600px;
 	height: 550px;
+	top: 50%;
+	left: 50%;
+  transform: translateX( -50% ) translateY( -50% );
 }
 
 .modalDialog {
