--- a/src/views/products/products.html
+++ b/src/views/products/products.html
@@ -109,10 +109,10 @@
 		</header>
 		<div class="inputProduct" id="inputProduct">
 				<div id="loading-box">
-					<div
+					<div class="lds-ring"><div></div></div>
 
 		<section class="rankedproducts" id="rankedproducts">
-			 class="lds-ring"><div></div></div>
+			
 				</div>
 			</div>
 		</section>
