--- a/src/views/paymentComplete/paymentComplete.html
+++ b/src/views/paymentComplete/paymentComplete.html
@@ -112,7 +112,7 @@
 		</header>
 
 		<main>
-			<h1 class="is-size-2">주문이 완료되었습니다.</h1>
+			<h1>주문이 완료되었습니다.</h1>
 			<article class="order-article box">
 				<div class="order-box content">
 					<p class="order-list title-content">주문 내역</p>
