--- a/src/views/admin/admin.css
+++ b/src/views/admin/admin.css
@@ -4,6 +4,7 @@
 	justify-content: center;
 	flex-direction: column;
 	padding: 0 20%;
+	margin: auto 0;
 }
 .block.account-header > h1 {
 	font-size: 20px;
@@ -11,8 +12,7 @@
 	display: inline-block;
 	width: 100%;
 	text-align: center;
-	padding: 5rem 0 0rem;
-	margin: 1.5rem 0;
+	margin: 0 0 1.5rem;
 }
 .menu-card {
 	border: 1px solid #e5e5e5;
