--- a/src/views/search/search.css
+++ b/src/views/search/search.css
@@ -79,7 +79,7 @@
 	font-size: 12px;
 	border-top: 1px solid #e5e5e5;
 }
-#loading-box{
+#loading-box {
 	width: 100%;
 	display: flex;
 	justify-content: center;
@@ -121,24 +121,22 @@
 	}
 }
 
-
-.searchResultTItle-box{
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 20px;
-  border-bottom: 2px solid #d2d0d0;
-  margin-bottom: 40px;
-
+.searchResultTItle-box {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 0 0 2rem;
+	border-bottom: 1px solid #e5e5e5;
+	margin: 0 0 2rem;
 }
-.searchResultTItle-box h1{
-  font-size: 25px;
-  font-weight: 500;
+.searchResultTItle-box h1 {
+	font-size: 21px;
+	font-weight: 400;
 }
-.searchResultTItle-box h1 strong{
-  font-size: 25px;
-  font-weight: 600;
+.searchResultTItle-box h1 strong {
+	font-size: 20px;
+	font-weight: 600;
 }
 .nullcategory {
 	display: block;
