--- a/src/views/css/common.css
+++ b/src/views/css/common.css
@@ -118,7 +118,7 @@ header {
 	width: 100%;
 	top: 0;
 	position: sticky;
-	z-index: 99;
+	z-index: 90;
 	background-color: #fff;
 	margin-bottom: 20px;
 }
@@ -194,19 +194,16 @@ header {
 .sidebarBtn {
 	font-size: 26px;
 	cursor: pointer;
-	position: absolute;
-	top: 2.7rem;
-	left: 2%;
-	padding-right: 52px;
 }
 
 .hidden-Toggle {
-	visibility: hidden;
+	display: none;
 }
 
 .sidebar-text {
 	font-size: 16px;
-	padding-left: 26px;
+	padding: 6px;
+	cursor: pointer;
 }
 @media (min-width: 320px) and (max-width: 1020px) {
 	.sidebar-text {
@@ -225,7 +222,7 @@ header {
 	color: #141414;
 	padding: 1.5rem 0 2rem 2.4%;
 	transition: 0.5s;
-	z-index: 100;
+	z-index: 200;
 }
 
 /* NAV */
@@ -298,6 +295,8 @@ header {
 }
 .nav__toggle {
 	width: 70px;
+	display: flex;
+	align-items: center;
 }
 
 /* Expander menu */
